WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98486
[EFL] Fix window resizing / moving in WK1 and WKTR
https://bugs.webkit.org/show_bug.cgi?id=98486
Summary
[EFL] Fix window resizing / moving in WK1 and WKTR
Chris Dumez
Reported
2012-10-04 23:34:52 PDT
Window resizing in WK1 should be improved so that the following tests can pass: fast/dom/Window/window-resize.html fast/dom/Window/window-resize-and-move-arguments.html The Window resizing / moving code in EFL's WKTR is wrong. It resizes / moves the view, not the window. We need to use ecore_evas API, not evas_object API.
Attachments
Patch
(5.86 KB, patch)
2012-10-04 23:43 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-10-04 23:43:13 PDT
Created
attachment 167263
[details]
Patch
Ryuan Choi
Comment 2
2012-10-04 23:46:56 PDT
(In reply to
comment #1
)
> Created an attachment (id=167263) [details] > Patch
LGTM.
WebKit Review Bot
Comment 3
2012-10-05 00:16:39 PDT
Comment on
attachment 167263
[details]
Patch Clearing flags on attachment: 167263 Committed
r130473
: <
http://trac.webkit.org/changeset/130473
>
WebKit Review Bot
Comment 4
2012-10-05 00:16:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug