[EFL] Fix window resizing / moving in WK1 and WKTR https://bugs.webkit.org/show_bug.cgi?id=98486

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-10-05
Reviewed by Gyuyoung Kim.

Source/WebKit/efl:

Fix ChromeClientEfl::windowRect() code to use
ecore_evas_request_geometry_get() instead of
evas_object_geometry_get() and therefore avoid
returning incorrect values when the engine has
not processed a call to ecore_evas_move_resize()
yet. This fixes a couple of layout tests.

The code was also refactored a bit for
consistency with the WebKit2 EFL implementation.

* WebCoreSupport/ChromeClientEfl.cpp:
(WebCore::ChromeClientEfl::windowRect):
(WebCore::ChromeClientEfl::setWindowRect):

Tools:

Fix PlatformWebView::windowFrame() and
PlatformWebView::setWindowFrame() in EFL's WKTR so
that it resizes / moves the window, not the view.

The new code matches the implementation in EwkView's
UIClient.

* WebKitTestRunner/efl/PlatformWebViewEfl.cpp:
(WTR::PlatformWebView::windowFrame):
(WTR::PlatformWebView::setWindowFrame):

LayoutTests:

Unskip 2 window resizing / moving tests now that
the implementation for those has been fixed in
WebKit1 EFL.

* platform/efl-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/116467@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130473 268f45cc-cd09-0410-ab3c-d52691b4dbfc